fix: timeline overflow & remove top legend

--- a/src/components/Options/AnimateOptions/style.css
+++ b/src/components/Options/AnimateOptions/style.css
@@ -1,10 +1,3 @@
-.options_wrapper {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 8px;
-}
-
 .options_container {
   width: 100%;
   height: 100%;
